--- a/Views/AuthWindow.xaml
+++ b/Views/AuthWindow.xaml
@@ -8,7 +8,30 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="AuthWindow">
 
-    <Grid>
-        
+    <Grid Margin="20">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <TextBlock Text="Авторизация" FontSize="20" Margin="0 0 0 10" Grid.Row="0"/>
+
+        <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="0 5">
+            <TextBlock Text="Логин:" Width="80" VerticalAlignment="Center"/>
+            <TextBox x:Name="LoginBox" Width="200"/>
+        </StackPanel>
+
+        <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="0 5">
+            <TextBlock Text="Пароль:" Width="80" VerticalAlignment="Center"/>
+            <PasswordBox x:Name="PasswordBox" Width="200"/>
+        </StackPanel>
+
+        <StackPanel Grid.Row="3" Orientation="Horizontal" Margin="0 10" HorizontalAlignment="Left">
+            <Button Content="Войти" Width="100" Margin="0 0 10 0" Click="Login_Click"/>
+            <Button Content="Регистрация" Width="120" Click="Register_Click"/>
+        </StackPanel>
     </Grid>
 </Page>
