--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -8,7 +8,29 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="MainWindow">
 
-    <Grid>
-        
+    <Grid Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <DataGrid x:Name="BooksGrid" Grid.Row="0" AutoGenerateColumns="False" IsReadOnly="True" SelectionMode="Single" Margin="0 0 0 10">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Артикул" Binding="{Binding Article}" Width="*"/>
+                <DataGridTextColumn Header="Название" Binding="{Binding Title}" Width="2*"/>
+                <DataGridTextColumn Header="Жанр" Binding="{Binding Genre}" Width="*"/>
+                <DataGridTextColumn Header="Описание" Binding="{Binding Description}" Width="2*"/>
+                <DataGridTextColumn Header="Дата" Binding="{Binding ReleaseDate}" Width="*"/>
+                <DataGridTextColumn Header="Статус" Binding="{Binding Status}" Width="*"/>
+            </DataGrid.Columns>
+        </DataGrid>
+
+        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0 5">
+            <Button Content="Добавить" Width="100" Margin="0 0 5 0" Click="Add_Click"/>
+            <Button Content="Изменить" Width="100" Margin="0 0 5 0" Click="Edit_Click"/>
+            <Button Content="Удалить" Width="100" Margin="0 0 5 0" Click="Delete_Click"/>
+            <Button Content="Выдать" Width="100" Margin="0 0 5 0" Click="Issue_Click"/>
+            <Button Content="Списать" Width="100" Click="Return_Click"/>
+        </StackPanel>
     </Grid>
 </Page>
