--- a/Views/RegisterWindow.xaml
+++ b/Views/RegisterWindow.xaml
@@ -8,7 +8,41 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="RegisterWindow">
 
-    <Grid>
-        
+    <Grid Margin="20">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <TextBlock Text="Регистрация" FontSize="20" Margin="0 0 0 10" Grid.Row="0"/>
+
+        <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="0 5">
+            <TextBlock Text="Логин:" Width="100" VerticalAlignment="Center"/>
+            <TextBox x:Name="LoginBox" Width="200"/>
+        </StackPanel>
+
+        <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="0 5">
+            <TextBlock Text="Пароль:" Width="100" VerticalAlignment="Center"/>
+            <PasswordBox x:Name="PasswordBox" Width="200"/>
+        </StackPanel>
+
+        <StackPanel Grid.Row="3" Orientation="Horizontal" Margin="0 5">
+            <TextBlock Text="ФИО:" Width="100" VerticalAlignment="Center"/>
+            <TextBox x:Name="FullNameBox" Width="200"/>
+        </StackPanel>
+
+        <StackPanel Grid.Row="4" Orientation="Horizontal" Margin="0 5">
+            <TextBlock Text="Телефон:" Width="100" VerticalAlignment="Center"/>
+            <TextBox x:Name="PhoneBox" Width="200"/>
+        </StackPanel>
+
+        <StackPanel Grid.Row="5" Orientation="Horizontal" Margin="0 10" HorizontalAlignment="Left">
+            <Button Content="Создать" Width="100" Margin="0 0 10 0" Click="Register_Click"/>
+            <Button Content="Назад" Width="100" Click="Back_Click"/>
+        </StackPanel>
     </Grid>
 </Page>
